# moon

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  STANDARDS.md  docker-compose.dev.yml  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: governance.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
agents/registry/: agent_manifest.schema.json  agents.yaml  capabilities.yaml
analyzers/: __init__.py  analyzer_factory.py  base_analyzer.py
analyzers/behavioral/: __init__.py  anomaly_detector.py  pattern_miner.py
analyzers/geo/: __init__.py  spatial_analyzer.py
analyzers/image/: __init__.py  exif_analyzer.py  face_recognizer.py  geo_estimator.py
analyzers/network/: __init__.py  community_detector.py  graph_builder.py  path_analyzer.py
analyzers/risk/: __init__.py  risk_calculator.py  threat_model.py
analyzers/sentiment/: __init__.py  sentiment_analyzer.py
analyzers/temporal/: __init__.py  timeline_analyzer.py
analyzers/text/: __init__.py  entity_extractor.py  language_detector.py  stylometry.py
apps/api/: __init__.py  middleware.py  routes.py  schemas.py
architecture/baseline/: dependency_map.md  event_model.md  layer_model.md  v1.0.md
capabilities/: discovery.yaml  entity_resolution.yaml  extraction.yaml  graph_analysis.yaml  identity_resolution.yaml  investigation.yaml  ocr.yaml  reporting.yaml  research.yaml  review.yaml  tracking.yaml
collectors/: __init__.py  base_collector.py  collector_factory.py
collectors/infrastructure/: cache_manager.py  circuit_breaker.py  proxy_manager.py  rate_limiter.py  (+2 more)
config/: __init__.py  api_keys.py  proxies.txt  settings.py
connectors/: __init__.py
core/: __init__.py  card.py  entity_matcher.py  provenance.py  registry.py  resolver.py  types.py
domain/: annotation.py  case.py  chain_of_custody.py  classification_level.py  collection.py  confidence_score.py  entity.py  event.py  evidence.py  finding.py  identity.py  investigation.py  relationship.py  report.py  source.py  task.py  timeline.py  workflow.py
graph/: __init__.py  graph_manager.py
models/: __init__.py  entity.py  identifier.py  investigation.py  relationship.py  source.py
normalizers/: __init__.py  address_normalizer.py  base_normalizer.py  date_normalizer.py  email_normalizer.py  identifier_normalizer.py  name_normalizer.py  phone_normalizer.py
scripts/: build.sh  dev.sh  format.sh  lint.sh  migrate.sh  release.sh  run_tests.sh  seed.sh  seed_registry.py  setup.sh  setup_db.py  test.sh
standards/: README.md
utils/: __init__.py  decorators.py  file_handler.py  hash_utils.py  logger.py  validators.py
workflows/: discovery.yaml  extraction.yaml  investigation.yaml  monitoring.yaml  reporting.yaml  research.yaml
(+91 files in other folders)
