[project]
name = "moon"
version = "0.1.0"
description = "Moon — منصة الاستخبارات والتحقيقات الرقمية (OSINT / Intelligence & Investigation Platform)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Moon Platform Contributors" }
]
keywords = ["osint", "intelligence", "investigation", "graph", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.13.4,<3",
    "fastapi>=0.139.2,<1",
    "uvicorn[standard]>=0.51.0,<1",
    "httpx>=0.27,<1",
    "networkx>=3.3,<4",
    "PyYAML>=6.0.3,<7",
    "python-dotenv>=1.2.2,<2",
    "structlog>=26.1.0,<27",
    "tenacity>=9.1.4,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.15.21,<1",
    "black>=24.4,<25",
    "mypy>=1.10,<2",
    "import-linter>=2.0,<3",
    "pre-commit>=3.7,<4",
    "types-PyYAML",
]
graph = [
    "neo4j>=6.2.0,<7",
]
nlp = [
    "spacy>=3.7,<4",
]

[project.urls]
Homepage = "https://github.com/OWNER/moon"
Documentation = "https://github.com/OWNER/moon/tree/main/docs"
Repository = "https://github.com/OWNER/moon"
Changelog = "https://github.com/OWNER/moon/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "core*", "normalizers*", "platform*", "intelligence*", "collectors*",
    "analyzers*", "graph*", "knowledge*", "agents*", "tools*", "processors*",
    "connectors*", "domain*", "workflows*", "ai*", "data*", "security*",
    "observability*", "apps*", "config*", "contracts*", "capabilities*",
    "policy_engine*", "sdk*", "plugins*", "models*", "utils*",
]
exclude = ["tests*", "webapp*", "public*", "src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["node_modules", "dist", ".wrangler", "src", "public"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = "(node_modules|dist|\\.wrangler|src|public)"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow-running tests",
]

[tool.coverage.run]
branch = true
source = [
    "core", "normalizers", "platform", "intelligence", "collectors",
    "analyzers", "graph", "knowledge", "agents", "tools", "processors",
    "connectors", "domain", "workflows", "security", "apps", "utils",
]
